Case for no images, fix text wrap

--- a/css/ucb-class-notes-list.css
+++ b/css/ucb-class-notes-list.css
@@ -47,6 +47,11 @@
   padding-bottom: 10px;
 }
 
+.ucb-class-note-body{
+  text-wrap: wrap;
+  word-wrap: break-word;
+}
+
 .ucb-list-msg {
     font-size: 1.25em;
     font-weight: bolder;
